add a calculate and a display method for the lawDeduction variable (the last commit was for TssDeduction)